20251110_daily_arXiv_update

--- a/arxiv/2025_10_arxiv.html
+++ b/arxiv/2025_10_arxiv.html
@@ -44,7 +44,7 @@
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20251001</p>
-<p class="p3"><a href="https://arxiv.org/abs/2509.26261">https://arxiv.org/abs/2509.26261</a><span class="s2"> Why is topology hard to learn?</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.26261">https://arxiv.org/abs/2509.26261</a></span> Why is topology hard to learn?</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.26596">https://arxiv.org/abs/2509.26596</a></span> Orbital altermagnetism on the kagome lattice and possible application to AV3Sb5 *** (Rafael M. Fernandes)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.26620">https://arxiv.org/abs/2509.26620</a></span> Amplified response of cavity-coupled quantum-critical systems (Shouvik Sur, Silke Paschen, Qimiao Si)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.25322">https://arxiv.org/abs/2509.25322</a></span> The Sound of Electrons Shattering: Current Noise Composition Laws for Electron Fractionalization ***** (Adarsh S. Patri, 2 Josephine J. Yu, Yi-Ming Wu, T. Senthil, Hart Goldman)</p>
@@ -176,6 +176,113 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.13941">https://arxiv.org/abs/2510.13941</a></span> Diffeomorphism invariant tensor networks for 3d gravity</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.14593">https://arxiv.org/abs/2510.14593</a></span> Interplay of ferromagnetism, nematicity and Fermi surface nesting in kagome flat band (Hoi Chun Po)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.14813">https://arxiv.org/abs/2510.14813</a></span> Quantum Fisher Information as a Thermal and Dynamical Probe in Frustrated Magnets: Insights from Quantum Spin Ice (Chengkang Zhou, Zhengbang Zhou, F´elix Desrochers, Yong Baek Kim, Zi Yang Meng)</p>
+<br>
+<p class="p1">20251020</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.15027">https://arxiv.org/abs/2510.15027</a> Topological Order Without Band Topology in Moir´e Graphene</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.15370">https://arxiv.org/abs/2510.15370</a> Entanglement complexification transition driven by a single non-Hermitian impurity</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.15111">https://arxiv.org/abs/2510.15111</a> Unusual critical points between atomic insulating phases **** (Yunchao Zhang, T. Senthil)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.15163">https://arxiv.org/abs/2510.15163</a> Three Types of Non-Fermi-Liquid Fixed Point for a Triplet Quantum Impurity in a Cubic Metal</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.15853">https://arxiv.org/abs/2510.15853</a> Quantum geometry of common semiconductors</p>
+<p class="p2"><br></p>
+<p class="p1">20251021</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.16401">https://arxiv.org/abs/2510.16401</a> Hybrid Brownian SYK–Hubbard Model: from Spectral Function to Quantum Chaos</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.16616">https://arxiv.org/abs/2510.16616</a> Finite-temperature signatures of underlying superconductivity in the electron-doped Hubbard model (Thomas P. Devereaux)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.17317">https://arxiv.org/abs/2510.17317</a> Entanglement Sum Rule from Higher-Form Symmetries</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.17404">https://arxiv.org/abs/2510.17404</a> Collective dynamics in holographic fractonic solids</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.17452">https://arxiv.org/abs/2510.17452</a> Enhanced Superconducting Diode Effect in the Asymmetric Hatsugai-Kohmoto Model (Pavan Hosur)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2411.08138">https://arxiv.org/abs/2411.08138</a> Emergent field theories from neural networks</p>
+<p class="p1"><a href="https://arxiv.org/abs/2504.08036">https://arxiv.org/abs/2504.08036</a> Consequences of Symmetry Fractionalization without 1-Form Global Symmetries</p>
+<p class="p1"><a href="https://arxiv.org/abs/2506.05066">https://arxiv.org/abs/2506.05066</a> Chiral anomaly in inhomogeneous systems with nontrivial momentum space topology</p>
+<p class="p2"><br></p>
+<p class="p1">20251022</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.18785">https://arxiv.org/abs/2510.18785</a> Fermi arcs for generic nodal points hosting monopoles or dipoles Ipsita Mandal</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.18408">https://arxiv.org/abs/2510.18408</a> Multi-entropy from Linking in Chern-Simons Theory</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.18875">https://arxiv.org/abs/2510.18875</a> Instabilities of a Generalized Gross-Neveu Quantum Criticality ***** (Jaewon Kim)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.18574">https://arxiv.org/abs/2510.18574</a> Covariant field theory of 3D massive fractons (Nicola Maggiore)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.17969">https://arxiv.org/abs/2510.17969</a> Non-invertible bosonic chiral symmetry on the lattice ***** (Lukasz Fidkowski, Cenke Xu, Carolyn Zhang)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.18805">https://arxiv.org/abs/2510.18805</a> Growth and collapse of subsystem complexity under random unitary circuits ***** (Jeongwan Haah, Douglas Stanford)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.18286">https://arxiv.org/abs/2510.18286</a> Information geometry of nonmonotonic quantum natural gradient</p>
+<p class="p2"><br></p>
+<p class="p1">20251023</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.19515">https://arxiv.org/abs/2510.19515</a> Intrinsic nonlinear Hall effect beyond Bloch geometry **** (Raffaele Resta)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.18950">https://arxiv.org/abs/2510.18950</a> Lieb-Robinson causality and non-Fermi liquids (Sean A. Hartnoll)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.18954">https://arxiv.org/abs/2510.18954</a> Haerter-Shastry kinetic magnetism and metallicity in the triangular Hubbard model</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.19083">https://arxiv.org/abs/2510.19083</a> Inter-orbital spin-triplet superconductivity from altermagnetic fluctuations</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.19483">https://arxiv.org/abs/2510.19483</a> Discrete Shift and Polarization from Response to Symmetry Defects in Interacting Topological Phases (Lu Zhang, Min Long, Yuxuan Zhang, Zi Yang Meng, Xue-Yang Song)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.19112">https://arxiv.org/abs/2510.19112</a> Noncommutative Gauge Theories: Yang-Mills extensions and beyond - An overview</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.19045">https://arxiv.org/abs/2510.19045</a> Colloquium: Quantum optics of intense light–matter interaction</p>
+<p class="p2"><br></p>
+<p class="p1">20251024</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.20186">https://arxiv.org/abs/2510.20186</a> Kondo breakdown induced by the non-Hermitian complex hybridization ***** (Kazuki Yamamoto, Masaya Nakagawa, Norio Kawakami)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.20804">https://arxiv.org/abs/2510.20804</a> Anomalous Hall effect in rhombohedral graphene (Daniel Kaplan,4, ∗ and Elio J. K¨onig)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.20816">https://arxiv.org/abs/2510.20816</a> Charge-density waves and stripes in quarter metals of graphene heterostructures (Sk Asrap Murshed, Bitan Roy)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.19928">https://arxiv.org/abs/2510.19928</a> Mind the gaps: The fraught road to quantum advantage ***** (Jens Eisert, John Preskill)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.19914">https://arxiv.org/abs/2510.19914</a> Fokker-Planck equation governing the distribution of walkers in AFQMC</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.20489">https://arxiv.org/abs/2510.20489</a> Phenomenological Noise Models and Optimal Thresholds of the 3D Toric Code ******</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.19907">https://arxiv.org/abs/2510.19907</a> Quantum Hall to Chiral Spin Liquid transition in a Triangular Lattice Hofstadter–Hubbard Model (Andrew Millis, Steven R. White)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.19937">https://arxiv.org/abs/2510.19937</a> Dimensionality-Changing Transition from a Non-Fermi Liquid to a Spin-Solid in a Multichannel Kondo Lattice (Fakher F. Assaad, Tarun Grover)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.20034">https://arxiv.org/abs/2510.20034</a> Dynamics of Majorana Fermions on a Quantum Computer</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.19943">https://arxiv.org/abs/2510.19943</a> Quantum geometry and impurity sensitivity of superconductors without time-reversal symmetry: application to rhombohedral graphene and altermagnets ***** (Mathias S. Scheurer)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.20309">https://arxiv.org/abs/2510.20309</a> Emergent Massless Dirac Fermions in Moiré Bands of Bilayer Graphene/hBN Superlattice</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.20049">https://arxiv.org/abs/2510.20049</a> Covariant photon current</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.19646">https://arxiv.org/abs/2510.19646</a> Large-N limit of O(N )3-invariant general sextic tensor model (G. Bardy, T. Krajewski, T. Muller, A. Tanasa)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.19751">https://arxiv.org/abs/2510.19751</a> A simplified version of the quantum OTOC(2) problem *****</p>
+<p class="p2"><br></p>
+<p class="p1">20251027</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.21522">https://arxiv.org/abs/2510.21522</a> Exciton-based sensing of remote electron correlations in 2D eterostructures (Allan H. MacDonald)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.20865">https://arxiv.org/abs/2510.20865</a> Philip Warren Anderson 13 December, 1923 - 20 March 2020 Elected FRS 1980 ***** (Premala Chandra, Piers Coleman, Clare C. Yu)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.20890">https://arxiv.org/abs/2510.20890</a> Hybrid Lattice Surgery: Non-Clifford Gates via Non-Abelian Surface Codes (Sakura Sch¨afer-Nameki)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.21291">https://arxiv.org/abs/2510.21291</a> Altermagnetism in an interacting model of Kagome materials</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.21651">https://arxiv.org/abs/2510.21651</a> Foundations of Carrollian Geometry</p>
+<p class="p2"><br></p>
+<p class="p1">20251028</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.22649">https://arxiv.org/abs/2510.22649</a> Normal Dirac Semimetal Phase and Zeeman-Induced Topological Fermi Arc in PtSr5 (Inkyou Lee, Churlhi Lyia, Youngkuk Kim)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.22867">https://arxiv.org/abs/2510.22867</a> Universal decay of (conditional) mutual information in gapped pure- and mixed-state quantum matter (Liujun Zou)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.21913">https://arxiv.org/abs/2510.21913</a> Intertwined Orders, Quantum Criticality and Skyrmions in Tunable Topological Bands (Xuepeng Wang, Johannes S. Hofmann, Debanjan Chowdhury)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.22831">https://arxiv.org/abs/2510.22831</a> Beyond the Lowest Landau Level: Unlocking More Robust Fractional States Using Flat Chern Bands with Higher Vortexability (Kai Sun)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.23604">https://arxiv.org/abs/2510.23604</a> Solution to a Quantum Impurity Model for Moir´ e Systems: Fermi Liquid, Pairing, and Pseudogap (Seung-Sup B. Lee, Zhi-Da Song)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2508.17115">https://arxiv.org/abs/2508.17115</a> LSM and CPT (Nathan Seiberg, Shu-Heng Shao, Wucheng Zhang)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.06376">https://arxiv.org/abs/2510.06376</a> Emergent Mixed States for Baby Universes and Black Holes (Jonah Kudler-Flam, Edward Witten)</p>
+<p class="p2"><br></p>
+<p class="p1">20251029</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.23706">https://arxiv.org/abs/2510.23706</a> Free-Fermion Measurement-Induced Volume- to Area-Law Entanglement Transition in the Presence of Fermion Interactions (Matthew S. Foster, Haoyu Guo, Chao-Ming Jian, Andreas W. W. Ludwig)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.24239">https://arxiv.org/abs/2510.24239</a> Identifying geometric third-order nonlinear transport in disordered materials</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.23618">https://arxiv.org/abs/2510.23618</a> Repulsively Bound Hadrons in a 2 Lattice Gauge Theory (Jad C. Halimeh</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.23725">https://arxiv.org/abs/2510.23725</a> Spontaneous symmetry breaking of SO(2<span class="s1">𝑁</span>)in Gross–Neveu theory from 2 +<span class="s1">𝜖</span> expansion ***** (Bilal Hawashin, Max Uetrecht)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.24289">https://arxiv.org/abs/2510.24289</a> Quantum geometric magnetic monopole and two-phase superconductivity in CeRh2As2 (Youichi Yanase)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.24713">https://arxiv.org/abs/2510.24713</a> Distinct Types of Parent Hamiltonians for Quantum States: Insights from the W State as a Quantum Many-Body Scar (Olexei I. Motrunich)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.23701">https://arxiv.org/abs/2510.23701</a> Onsiteability of Higher-Form Symmetries ***** (Yitao Feng, Yu-An Chen, Po-Shen Hsin, Ryohei Kobayashi)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.23743">https://arxiv.org/abs/2510.23743</a> Beyond Random Phase Approximation in electron-hole bilayer superfluidity</p>
+<p class="p1"><a href="https://arxiv.org/abs/2411.13605">https://arxiv.org/abs/2411.13605</a> Quantum Field Measurements in the Fewster-Verch Framework</p>
+<p class="p1"><a href="https://arxiv.org/abs/2506.05785">https://arxiv.org/abs/2506.05785</a> Combinatorial quantization of 4d 2-Chern-Simons theory II: Quantum invariants of higher ribbons in D4</p>
+<p class="p2"><br></p>
+<p class="p1">20251030</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25459">https://arxiv.org/abs/2510.25459</a> Vorticity-induced effects from Wess-Zumino-Witten terms</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25358">https://arxiv.org/abs/2510.25358</a> Entanglement-enhanced correlation propagation in the one-dimensional SU(N) Fermi-Hubbard model</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.24834">https://arxiv.org/abs/2510.24834</a> How to Build Anomalous (3+1)d Topological Quantum Field Theories ***** (Arun Debray, Weicheng Ye, Matthew Yu)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25767">https://arxiv.org/abs/2510.25767</a> Superconductivity in overdoped cuprates can be understood from a BCS perspective! ***** (B. J. Ramshaw, Steven A. Kivelson)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25022">https://arxiv.org/abs/2510.25022</a> Finite-Temperature Study of the Hubbard Model via Enhanced Exponential Tensor Renormalization Group (Jan von Delft)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25349">https://arxiv.org/abs/2510.25349</a> Immobile and mobile excitations of three-spin interactions on the diamond chain</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25539">https://arxiv.org/abs/2510.25539</a> Quantum Spin Liquids Stabilized by Disorder in Non-Kramers Pyrochlores</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25553">https://arxiv.org/abs/2510.25553</a> Renormalization group for deep neural networks: Universality of learning and scaling laws</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25717">https://arxiv.org/abs/2510.25717</a> Action-Angle Variables in Quantum Gravity</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25081">https://arxiv.org/abs/2510.25081</a> QCD chiral phase diagram from weak functional renormalization group</p>
+<p class="p2"><br></p>
+<p class="p1">20251031</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.26074">https://arxiv.org/abs/2510.26074</a> Invariants for (2+1)D bosonic crystalline topological insulators for all 17 wallpaper groups (Maissam Barkeshli)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25907">https://arxiv.org/abs/2510.25907</a> From Divergent Series to Geometry: Resurgence of the Quantum Metric ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.26535">https://arxiv.org/abs/2510.26535</a> From dual gauge theories to dual spin models</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25868">https://arxiv.org/abs/2510.25868</a> Spatially Structured Entanglement from Nonequilibrium Thermal Pure States (Shinsei Ryu)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.26720">https://arxiv.org/abs/2510.26720</a> Emergence of charge-4e superconductivity from 2D nematic superconductors **** (Hong Yao)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25840">https://arxiv.org/abs/2510.25840</a> Scaling of the disorder operator at (3+1)D O(3) quantum criticality</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25845">https://arxiv.org/abs/2510.25845</a> Z2 Universality of the Mott Transition (Philip W. Phillips)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25994">https://arxiv.org/abs/2510.25994</a> Hyperbolic Fracton Model, Subsystem Symmetry and Holography III: Extension to Generic Tessellations (Han Yan)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.26671">https://arxiv.org/abs/2510.26671</a> Fractional Chern insulators on cylinders: Tao-Thouless states and beyond</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.26686">https://arxiv.org/abs/2510.26686</a> Phases of Quasi-One-Dimensional Fractional Quantum (Anomalous) Hall –Superconductor Heterostructures (Elio J. K¨onig)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.26798">https://arxiv.org/abs/2510.26798</a> Spin Polarons in Flat Band Ferromagnets (Saranesh Prembabu, Rahul Sahay,1 Stefan Divic, Ashvin Vishwanath)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.26801">https://arxiv.org/abs/2510.26801</a> Resonating-valence-bond superconductor from small Fermi surface in twisted bilayer graphene (Jing-Yu Zhao, Ya-Hui Zhang)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.25959">https://arxiv.org/abs/2510.25959</a> Equivalent class of Emergent Single Weyl Fermion in 3d Topological States: gapless superconductors and superfluids Vs chiral fermions</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.26528">https://arxiv.org/abs/2510.26528</a> Superconductivity in hyperbolic spaces: Cayley trees, hyperbolic continuum, and BCS theory</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.14259">https://arxiv.org/abs/2510.14259</a></span> Superconductivity in UTe2 from local noncentrosymmetricity</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
